--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.sinensia</groupId>
-	<artifactId>netflix</artifactId>
+	<groupId>com.apirest</groupId>
+	<artifactId>moviedb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>netflix</name>
-	<description>netflix</description>
+	<name>moviedb</name>
+	<description>moviedb</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
