--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://rdbm:3306/gft06
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gft06
 spring.datasource.username=gft06
 spring.datasource.password=gft06
-spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+management.endpoints.web.exposure.include=health,info,metrics,mappings
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/manage
